adding testing features

--- a/apeiron/resources/templates/report.html
+++ b/apeiron/resources/templates/report.html
@@ -5,7 +5,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
-    <h2>Sales Funnel Report - National</h2>
-     {{ national_pivot_table }}
+    <h2>National Information</h2>
+     {{ body }}
 </body>
 </html>
